src/pp/block2/cc/antlr/Arithmetic.g4
grammar Arithmetic;

goal : expr;

expr :  expr '+' term # plusrule
       | expr '-' term # minusrule
       | term # singleruleexpr
        ;

term : term '*' exponent # multiplyrule
     | term '/' exponent # dividerule
     | exponent # singleruleterm
     ;

exponent : <assoc=right > factor '^' exponent
     | factor;


factor : '(' expr ')'
        | NUM;



NUM : ('1'..'9' ('0'..'9')* | '0');

WS : [ \t\n\r] -> skip;
